--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,6 +10,7 @@ on:
       - '.github/**'
       - '.idea/**'
       - '!.github/workflows/**'
+  workflow_dispatch:
   pull_request:
     branches: [ "master" ]
     paths-ignore:
@@ -50,7 +51,7 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: | 
-        ./gradlew assembleRelease
+        ./gradlew assembleDebug
         echo "APK_FILE_ARMEABI=$(find app/build/outputs/apk/release -name 'OShin_armeabi-v7a_v*.apk')" >> $GITHUB_ENV
         echo "APK_FILE_ARM64=$(find app/build/outputs/apk/release -name 'OShin_arm64-v8a_v*.apk')" >> $GITHUB_ENV
         echo "APK_FILE_ARMALL=$(find app/build/outputs/apk/release -name 'OShin_all_v*.apk')" >> $GITHUB_ENV
